--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +66,200 @@
     "class_0=pd.DataFrame({\n",
     "    'feature_1':np.random.normal(loc=0,scale=1,size=n_class_0),\n",
     "    'feature_2':np.random.normal(loc=0,scale=1,size=n_class_0),\n",
-    "    'target':[0]*n_class_0\n",
+    "    'target':[0]*n_class_0 #--> 0 will be created by 900 time\n",
     "})\n",
     "\n",
     "class_1=pd.DataFrame({\n",
     "    'feature_1':np.random.normal(loc=2,scale=1,size=n_class_1),\n",
     "    'feature_2':np.random.normal(loc=2,scale=1,size=n_class_1),\n",
-    "    'target':[1]*n_class_1\n",
-    "})"
+    "    'target':[1]*n_class_1  #--> 1 will be created by 100 times\n",
+    "})\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.concat([class_0,class_1]).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "      <th>feature_2</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.085631</td>\n",
+       "      <td>0.551302</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.997345</td>\n",
+       "      <td>0.419589</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.282978</td>\n",
+       "      <td>1.815652</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.506295</td>\n",
+       "      <td>-0.252750</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.578600</td>\n",
+       "      <td>-0.292004</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature_1  feature_2  target\n",
+       "0  -1.085631   0.551302       0\n",
+       "1   0.997345   0.419589       0\n",
+       "2   0.282978   1.815652       0\n",
+       "3  -1.506295  -0.252750       0\n",
+       "4  -0.578600  -0.292004       0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "      <th>feature_2</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>1.376371</td>\n",
+       "      <td>2.845701</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2.239810</td>\n",
+       "      <td>0.880077</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1.131760</td>\n",
+       "      <td>1.640703</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2.902006</td>\n",
+       "      <td>0.390305</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>2.697490</td>\n",
+       "      <td>2.013570</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     feature_1  feature_2  target\n",
+       "995   1.376371   2.845701       1\n",
+       "996   2.239810   0.880077       1\n",
+       "997   1.131760   1.640703       1\n",
+       "998   2.902006   0.390305       1\n",
+       "999   2.697490   2.013570       1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
