--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -282,7 +282,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#upsampling \n",
+    "df['target']==1"
+   ]
   }
  ],
  "metadata": {
