--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -323,6 +323,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_upsampled=pd.concat([df_majority,df_minority_upsampled])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
