--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -355,6 +355,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#downsampling\n",
+    "\n",
+    "from sklearn.utils import resample\n",
+    "df_majority_downsample=resample(df_majority,replace=False,\n",
+    "                                n_samples=len(df_minority),\n",
+    "                                random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
