--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "it is used when minority class has significantly fewer instances than the majority class"
+    "it is used when minority class has significantly fewer instances than the majority class.SMOTE involves generating synthetic instances of the minority class by interpolating existing instances."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
