--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -16,10 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import make_classification\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -36,7 +38,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
