--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -24,6 +24,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "n_samples=1000: Creates 1000 data points (samples).\n",
+    "\n",
+    "n_features=2: Each sample has 2 features (X1, X2).\n",
+    "\n",
+    "n_redundant=0: No redundant features; all features contain useful information.\n",
+    "\n",
+    "n_clusters_per_class=1: Each class will have 1 cluster.\n",
+    "\n",
+    "weights=[0.90]: The first class (label 0) gets 90% of the samples, creating imbalanced data.\n",
+    "\n",
+    "random_state=12: Ensures reproducibility"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
