--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import make_classification\n"
+    "from sklearn.datasets import make_classification"
    ]
   },
   {
@@ -45,7 +45,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating synthetic dataset(variables)\n"
+   ]
   }
  ],
  "metadata": {
