--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -46,7 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating synthetic dataset(variables)\n"
+    "# creating synthetic dataset(variables)\n",
+    "\n",
+    "x,y=make_classification()"
    ]
   }
  ],
