--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "# creating synthetic dataset(variables)\n",
     "\n",
-    "x,y=make_classification()"
+    "x,y=make_classification(n_samples=1000,n_redundant=0,n_features=2,)"
    ]
   }
  ],
