--- a/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling imbalanced datasets using smote.ipynb
@@ -50,6 +50,15 @@
     "\n",
     "x,y=make_classification(n_samples=1000,n_redundant=0,n_features=2,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feture engineering is done by the end of the day"
+   ]
   }
  ],
  "metadata": {
