--- a/1)Notes/18-Feature Engineering/Handling outliers.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling outliers.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "use outliers from python"
+   ]
   },
   {
    "cell_type": "code",
