--- a/1)Notes/18-Feature Engineering/Data encoding.ipynb
+++ b/1)Notes/18-Feature Engineering/Data encoding.ipynb
@@ -3,6 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Encoding \n",
+    "\n",
+    "It means that converting categorial data into useful numerical value that can machine learning model can understand it "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
