--- a/1)Notes/18-Feature Engineering/Data encoding.ipynb
+++ b/1)Notes/18-Feature Engineering/Data encoding.ipynb
@@ -12,6 +12,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 1) Nominal / One Hot Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there is problem with ohe, model is getting overtrained because of this means overfitting issue arised"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R       G      B\n",
+    "\n",
+    "1       0      0  \n",
+    "\n",
+    "0       1      0\n",
+    "\n",
+    "0       0      1 \n",
+    " \n",
+    "\n",
+    "\n",
+    "\n",
+    " This is way to convert categorial value into binary data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
