--- a/1)Notes/18-Feature Engineering/Data encoding.ipynb
+++ b/1)Notes/18-Feature Engineering/Data encoding.ipynb
@@ -42,14 +42,716 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tips=sns.load_dataset('tips')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sex=pd.DataFrame(tips['sex'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder=OneHotEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform_sex_table=encoder.fit_transform(sex).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform_sex_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sex\n",
+       "0    Female\n",
+       "1      Male\n",
+       "2      Male\n",
+       "3      Male\n",
+       "4    Female\n",
+       "..      ...\n",
+       "239    Male\n",
+       "240  Female\n",
+       "241    Male\n",
+       "242    Male\n",
+       "243  Female\n",
+       "\n",
+       "[244 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sex_df=pd.DataFrame(transform_sex_table,columns=encoder.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex_Female</th>\n",
+       "      <th>sex_Male</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sex_Female  sex_Male\n",
+       "0           1.0       0.0\n",
+       "1           0.0       1.0\n",
+       "2           0.0       1.0\n",
+       "3           0.0       1.0\n",
+       "4           1.0       0.0\n",
+       "..          ...       ...\n",
+       "239         0.0       1.0\n",
+       "240         1.0       0.0\n",
+       "241         0.0       1.0\n",
+       "242         0.0       1.0\n",
+       "243         1.0       0.0\n",
+       "\n",
+       "[244 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sex_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>sex_Female</th>\n",
+       "      <th>sex_Male</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sex  sex_Female  sex_Male\n",
+       "0    Female         1.0       0.0\n",
+       "1      Male         0.0       1.0\n",
+       "2      Male         0.0       1.0\n",
+       "3      Male         0.0       1.0\n",
+       "4    Female         1.0       0.0\n",
+       "..      ...         ...       ...\n",
+       "239    Male         0.0       1.0\n",
+       "240  Female         1.0       0.0\n",
+       "241    Male         0.0       1.0\n",
+       "242    Male         0.0       1.0\n",
+       "243  Female         1.0       0.0\n",
+       "\n",
+       "[244 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([sex,sex_df],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
