--- a/1)Notes/18-Feature Engineering/Data encoding.ipynb
+++ b/1)Notes/18-Feature Engineering/Data encoding.ipynb
@@ -728,6 +728,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this value is converted into machine language "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
