--- a/1)Notes/18-Feature Engineering/label and ordinal encoding.ipynb
+++ b/1)Notes/18-Feature Engineering/label and ordinal encoding.ipynb
@@ -177,11 +177,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ordinal Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# When we need to assign numerical values according to ranks then we use ordinal encoder\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
