--- a/1)Notes/18-Feature Engineering/label and ordinal encoding.ipynb
+++ b/1)Notes/18-Feature Engineering/label and ordinal encoding.ipynb
@@ -184,14 +184,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# When we need to assign numerical values according to ranks then we use ordinal encoder\n",
+    "When we need to assign numerical values according to ranks then we use ordinal encoder\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is used to encode categorical data that have an intrinsic order or ranking. In this technique, each category is assigned a numerical value based on its position in the order. For example, if we have a categorical variable \"education level\" with four possible values (high school, college, graduate, post-graduate), we can represent it using ordinal encoding as follows:\n",
+    "\n",
+    "1. High school: 1\n",
+    "2. College: 2\n",
+    "3. Graduate: 3\n",
+    "4. Post-graduate: 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
