Update Red Wine Dataset.ipynb

--- a/1)Notes/19-EDA/Red Wine Dataset.ipynb
+++ b/1)Notes/19-EDA/Red Wine Dataset.ipynb
@@ -216,7 +216,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gff"
+   ]
   }
  ],
  "metadata": {
