--- a/1)Notes/0-Revision/Feature Engineering/imbalanced datasets.ipynb
+++ b/1)Notes/0-Revision/Feature Engineering/imbalanced datasets.ipynb
@@ -533,10 +533,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_new=pd.concat([df_upsampled,df_downsampled])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "feature_1  feature_2  target\n",
+       "1.005190   1.110089   1         20\n",
+       "3.701608   2.160889   1         19\n",
+       "1.915470   1.652041   1         19\n",
+       "2.902006   0.390305   1         17\n",
+       "3.013493   2.047240   1         17\n",
+       "                                ..\n",
+       "1.651742   2.957502   0          1\n",
+       "1.652036   0.162735   0          1\n",
+       "1.653833   1.985986   0          1\n",
+       "1.653910   0.319866   0          1\n",
+       "1.986396   4.165701   0          1\n",
+       "Name: count, Length: 1000, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new.value_counts()"
+   ]
   }
  ],
  "metadata": {
