--- a/1)Notes/0-Revision/Basics/basics.ipynb
+++ b/1)Notes/0-Revision/Basics/basics.ipynb
@@ -29,8 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "63ae9afa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "x= \"hello\"\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca0402d",
    "metadata": {},
    "outputs": [],
    "source": []
