--- a/1)Notes/0-Revision/Basics/basics.ipynb
+++ b/1)Notes/0-Revision/Basics/basics.ipynb
@@ -49,8 +49,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ca0402d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b =10\n",
+    "c=a\n",
+    "\n",
+    "print(a is not c)\n",
+    "print(a is b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e2f0f26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34206578",
    "metadata": {},
    "outputs": [],
    "source": []
